add doctor
