# dto/provider/services/getAllDoctors.go
@@ -3,15 +3,21 @@ package services
 import "go.mongodb.org/mongo-driver/bson/primitive"
 
 type DoctorResDto struct {
-	Status  bool        `json:"status" bson:"status"`
-	Message string      `json:"message" bson:"message"`
-	Data    []DoctorRes `json:"data" bson:"data"`
+	Status  bool                   `json:"status" bson:"status"`
+	Message string                 `json:"message" bson:"message"`
+	Data    []SpecialityDoctorsRes `json:"data" bson:"data"`
+}
+
+type SpecialityDoctorsRes struct {
+	Speciality string      `json:"speciality"`
+	Doctors    []DoctorRes `json:"doctors"`
 }
 
 type DoctorRes struct {
 	Id         primitive.ObjectID  `json:"id"`
 	Name       string              `json:"name"`
 	Speciality string              `json:"speciality"`
+	Image      string              `json:"image"`
 	Schedule   []DoctorScheduleRes `json:"schedule"`
 }
 
@@ -22,7 +28,7 @@ type DoctorScheduleRes struct {
 }
 
 type GetDoctorResDto struct {
-	Status  bool         `json:"status" bson:"status"`
-	Message string       `json:"message" bson:"message"`
+	Status  bool      `json:"status" bson:"status"`
+	Message string    `json:"message" bson:"message"`
 	Data    DoctorRes `json:"data" bson:"data"`
 }
